tests/textual/error/equalsInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin equalsInteger)(con string "Ola")](con integer 10)])